add more jvm options